Fix css issues with 100% width images

--- a/_sass/2-components/_authors.sass
+++ b/_sass/2-components/_authors.sass
@@ -9,6 +9,8 @@
   &__container
     +grid-collapse
     +grid-container
+_posts/2018/2018-06-05-why-we-go-beyond-insights-from-our-cto.md
+    display: flex
 
   &__card
     +grid-column(12)
