--- a/_sass/2-components/_cards.sass
+++ b/_sass/2-components/_cards.sass
@@ -79,7 +79,7 @@ $widths: 5,10,15,20,25,30,35,40,45,50,55,60,65,70,75,80,85,90,95,100
           margin: 0
           display: initial
 
-    div:not(.custom-image .author__image) img:not(.icon-share), P img:not(.icon-share)
+    div:not(.custom-image):not(.author__image) img:not(.icon-share), P img:not(.icon-share)
       margin: 2rem 0
       margin-left: -$card-margin-mobile
       width: calc(100% + #{$card-margin-mobile} * 2)
