Remove google and fontawesome fonts

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -30,9 +30,7 @@
     <meta property="og:image" name="twitter:image" content="{{ site.url }}/assets/img/pages/headers/{{ page.header_image }}" />
   {% endif %}
 
-  <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto+Mono:400,400i,700,700i" />
-
-  <script defer src="https://use.fontawesome.com/releases/v5.0.2/js/all.js"></script>
+  <script defer src="/assets/js/fontawesome.js"></script>
 
   <link rel="stylesheet" href="/assets/css/main.css?{{ site.time | date: '%s%N' }}" />
 
