--- a/_includes/head.html
+++ b/_includes/head.html
@@ -30,15 +30,15 @@
     <meta property="og:image" name="twitter:image" content="{{ site.url }}/assets/img/pages/headers/{{ page.header_image }}" />
   {% endif %}
 
-  <script defer src="/assets/js/fontawesome.js"></script>
-
-  <link rel="stylesheet" href="/assets/css/main.css?{{ site.time | date: '%s%N' }}" />
-
-  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-  <script src='https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.5/MathJax.js?config=TeX-MML-AM_CHTML' async></script>
-
+  <script defer src="/assets/js/fontawesome.min.js"></script>
+  <script src="/assets/js/jquery.min.js"></script>
+  <script src='/assets/js/math-jax.min.js' async></script>
   <script src="/assets/js/lightbox.min.js"></script>
+  
+  <link rel="stylesheet" href="/assets/css/main.css?{{ site.time | date: '%s%N' }}" />
   <link rel="stylesheet" href="/assets/css/lightbox.css" />
+  
+  
 
   <script src="{{ '/assets/js/cookie-notice.js' | relative_url }}"></script>
 
