move all mathjax to lib folder

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -32,7 +32,7 @@
 
   <script defer src="/assets/js/fontawesome.min.js"></script>
   <script src="/assets/js/jquery.min.js"></script>
-  <script src="/assets/js/math-jax.min.js"></script>
+  <script src="/assets/js/lib/math-jax.min.js"></script>
   <script src="/assets/js/lightbox.min.js"></script>
 
   <link rel="stylesheet" href="/assets/css/main.css?{{ site.time | date: '%s%N' }}" />
