--- a/_includes/components/signup-form.html
+++ b/_includes/components/signup-form.html
@@ -15,7 +15,7 @@
 
     <p class="modal__text">Just enter your details below to sign up for the ePages Developer Program and you will receive a free ePages Now test shop.</p>
 
-    <form class="form" id="demoshopform-now" method="post" action="https://devshop.epages.com/epages/Site.sf/en_GB/?ObjectPath=/Providers/epagesdev&ViewAction=ViewProviderRegistrationForm" target="frame--epages-now">
+    <form class="form" id="demoshopform-now" method="post" action="https://www.epagesdemo.de/epages/Site.sf/en_GB/?ObjectPath=/Providers/epagesdev&ViewAction=ViewProviderRegistrationForm" target="frame--epages-now">
 
       <div class="form__row  form--cols-2">
         <input class="form__input" type="text" name="LastName" id="LastName" placeholder="Full name *" required />
